--- a/metrics/MetricsNN.ipynb
+++ b/metrics/MetricsNN.ipynb
@@ -48,10 +48,10 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "07703545-574f-45fa-c208-97fcc3027bca",
+        "outputId": "5d1566ff-04a9-4a27-db1c-03ca0fad81d3",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 306
         }
       },
       "source": [
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 9
         }
       ]
     },
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "516042d5-6f27-4eb0-fdfd-e95436fc81aa",
+        "outputId": "2795ec94-e5ea-43f7-d340-1503f8962717",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -223,6 +223,9 @@
       "source": [
         "# Calculate the MAE for predicted points vs. actual points\n",
         "# Calculate the MAE for current points using the average of previous weeks\n",
+        "column_names = ['week', 'arima', 'average']\n",
+        "metric_df = pd.DataFrame(columns = column_names)\n",
+        "\n",
         "for i in range(1, 18):\n",
         "\n",
         "    filename = 'https://raw.githubusercontent.com/JimKing100/nfl-test/master/data-predictions-prod3/predictions-week' + str(i) + '.csv'\n",
@@ -254,9 +257,14 @@
         "\n",
         "    # Calculate the MAE for current vs. actual\n",
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
-        "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n"
+        "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n",
+        "\n",
+        "    metric_df = metric_df.append({'week': i, 'arima': week_pa_mae, 'average': week_ca_mae}, ignore_index=True)\n",
+        "\n",
+        "file_name = '/content/nn_metrics.csv'\n",
+        "metric_df.to_csv(file_name, index=False)"
       ],
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
