--- a/metrics/MetricsNN.ipynb
+++ b/metrics/MetricsNN.ipynb
@@ -48,7 +48,7 @@
       "metadata": {
         "id": "RgOXqOBKx4MC",
         "colab_type": "code",
-        "outputId": "5d1566ff-04a9-4a27-db1c-03ca0fad81d3",
+        "outputId": "b95612d8-689f-4f08-94cd-ecb5376963ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 306
@@ -67,7 +67,7 @@
         "\n",
         "w1_results_df.head()"
       ],
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -205,7 +205,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
     },
@@ -214,7 +214,7 @@
       "metadata": {
         "id": "BHPmWvto0XSY",
         "colab_type": "code",
-        "outputId": "2795ec94-e5ea-43f7-d340-1503f8962717",
+        "outputId": "900f742d-1456-48e5-f154-f0b25faec5cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 884
@@ -223,7 +223,7 @@
       "source": [
         "# Calculate the MAE for predicted points vs. actual points\n",
         "# Calculate the MAE for current points using the average of previous weeks\n",
-        "column_names = ['week', 'arima', 'average']\n",
+        "column_names = ['week', 'nn', 'average']\n",
         "metric_df = pd.DataFrame(columns = column_names)\n",
         "\n",
         "for i in range(1, 18):\n",
@@ -259,12 +259,12 @@
         "    week_ca_mae = mean_absolute_error(week_act, week_current)\n",
         "    print('MAE current vs actual week {0:2d} {1:3.2f}'.format(i, week_ca_mae), '\\n')\n",
         "\n",
-        "    metric_df = metric_df.append({'week': i, 'arima': week_pa_mae, 'average': week_ca_mae}, ignore_index=True)\n",
+        "    metric_df = metric_df.append({'week': i, 'nn': week_pa_mae, 'average': week_ca_mae}, ignore_index=True)\n",
         "\n",
         "file_name = '/content/nn_metrics.csv'\n",
         "metric_df.to_csv(file_name, index=False)"
       ],
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
