--- a/metrics/MetricsPvA.ipynb
+++ b/metrics/MetricsPvA.ipynb
@@ -214,9 +214,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 51
+          "height": 68
         },
-        "outputId": "be5c4a54-7be7-456e-f860-cd03f60632a7"
+        "outputId": "7a16aca2-e636-4d8a-9b91-98c06ca7ca00"
       },
       "source": [
         "for i in range(1, 2):\n",
@@ -246,7 +246,7 @@
         "\n",
         "    # Calulate prediction vs. actual for average\n",
         "    \n",
-        "    total_correct = 0\n",
+        "    cur_total_correct = 0\n",
         "    num_players = len(week_current)\n",
         "\n",
         "    for j in range(0, num_players):\n",
@@ -258,13 +258,13 @@
         "                  cur_count = cur_count + 1\n",
         "              if week_act[j] < week_act[k]:\n",
         "                  act_count = act_count + 1\n",
-        "        total_correct = total_correct + (num_players - abs(act_count - cur_count))\n",
-        "        # print(cur_count, act_count, num_players, '# correct predictions = ', (num_players - abs(act_count - cur_count)), total_correct)\n",
-        "    print(total_correct/(653 * 652))\n",
+        "        cur_total_correct = cur_total_correct + (num_players - abs(act_count - cur_count))\n",
+        "        # print(cur_count, act_count, num_players, '# correct predictions = ', (num_players - abs(act_count - cur_count)), cur_total_correct)\n",
+        "    print(cur_total_correct, cur_total_correct/(653 * 652))\n",
         "\n",
         "    # Calulate prediction vs. actual for ARIMA\n",
         "    \n",
-        "    total_correct = 0\n",
+        "    pred_total_correct = 0\n",
         "    num_players = len(week_pred)\n",
         "\n",
         "    for j in range(0, num_players):\n",
@@ -276,17 +276,19 @@
         "                  pred_count = pred_count + 1\n",
         "              if week_act[j] < week_act[k]:\n",
         "                  act_count = act_count + 1\n",
-        "        total_correct = total_correct + (num_players - abs(act_count - pred_count))\n",
-        "        # print(pred_count, act_count, num_players, '# correct predictions = ', (num_players - abs(act_count - pred_count)), total_correct)\n",
-        "    print(total_correct/(653 * 652))\n"
+        "        pred_total_correct = pred_total_correct + (num_players - abs(act_count - pred_count))\n",
+        "        # print(pred_count, act_count, num_players, '# correct predictions = ', (num_players - abs(act_count - pred_count)), pred_total_correct)\n",
+        "    print(pred_total_correct, pred_total_correct/(653 * 652))\n",
+        "    print('Total additional correct using ARIMA = ', pred_total_correct - cur_total_correct)\n"
       ],
-      "execution_count": 30,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.8237135824274937\n",
-            "0.8302807241706517\n"
+            "350701 0.8237135824274937\n",
+            "353497 0.8302807241706517\n",
+            "Total additional correct using ARIMA =  2796\n"
           ],
           "name": "stdout"
         }
