--- a/neural-network/Article.ipynb
+++ b/neural-network/Article.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled84.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMciEGej03PJdsQY6Ymm3jk",
+      "authorship_tag": "ABX9TyMhHz/jZt2gRg1+LBz8xBN9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "88edf3c4-3a54-437a-a4a4-51b3003aced3"
+        "outputId": "5258d574-1e59-4f7d-b87a-8269b978639c"
       },
       "source": [
         "# Imports\n",
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 355
         },
-        "outputId": "25f25824-85a7-4ab7-8f2c-b67b1ac39b0e"
+        "outputId": "29c1e69c-0fa8-46d3-b501-f7214d365a20"
       },
       "source": [
         "# The dataframe of actual offensive points for each game from 2000-2019\n",
@@ -665,7 +665,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "05ca0430-bece-4f6f-ac36-1aa5b05abb3a"
+        "outputId": "68a73e02-e6b4-457d-f7e9-e81946724112"
       },
       "source": [
         "# The dataframe of all 2019 offensive players (kickers and offense)\n",
@@ -778,7 +778,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "feb464dd-1bc8-4132-b8be-cddf5ea84849"
+        "outputId": "285e0a4f-1617-4c96-8563-77082115de7e"
       },
       "source": [
         "# The dataframe of bye weeks for 2019 teams\n",
@@ -891,7 +891,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "03867f82-a769-420d-ff6a-6a76c867a6b6"
+        "outputId": "eabb1582-1927-40df-886f-59fd1f1dda61"
       },
       "source": [
         "# The dataframe of injuries for 2019 players\n",
@@ -1206,6 +1206,7 @@
         "\n",
         "    # Forecast the entire training dataset to build up state for forecasting\n",
         "    train_reshaped = train_scaled[:, 0].reshape(len(train_scaled), 1, 1)\n",
+        "    print('lstm_predict function: train_reshaped = ', train_reshaped)\n",
         "    lstm_model.predict(train_reshaped, batch_size=1)\n",
         "\n",
         "    # Walk-forward validation on the test data\n",
@@ -1216,6 +1217,7 @@
         "        yhat = forecast_lstm(lstm_model, 1, X)\n",
         "        # Invert scaling\n",
         "        yhat = invert_scale(scaler, X, yhat)\n",
+        "        print('                       yhat = ', yhat)\n",
         "        # Sum the weekly forecasts\n",
         "        yhat_sum = yhat_sum + yhat\n",
         "\n",
@@ -1365,7 +1367,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "a85d3051-1dee-45ae-c815-f5531a99ea51"
+        "outputId": "c32034f1-d48c-4214-d92c-065db3f12d82"
       },
       "source": [
         "# Run for seasons 1 through 17\n",
@@ -2863,7 +2865,462 @@
             "\n",
             " [[-3.51373183e-01]]\n",
             "\n",
-            " [[ 8.77221325e-01]]]\n"
+            " [[ 8.77221325e-01]]]\n",
+            "lstm_predict function: train_reshaped =  [[[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-1.00000000e+00]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.99030695e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.72374798e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.79644588e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.71567044e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-2.87560582e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-6.21970921e-02]]\n",
+            "\n",
+            " [[ 1.39741519e-01]]\n",
+            "\n",
+            " [[-1.43780291e-01]]\n",
+            "\n",
+            " [[-4.74959612e-01]]\n",
+            "\n",
+            " [[ 7.10823910e-02]]\n",
+            "\n",
+            " [[ 5.89660743e-02]]\n",
+            "\n",
+            " [[-4.00646204e-01]]\n",
+            "\n",
+            " [[-3.43295638e-01]]\n",
+            "\n",
+            " [[-6.61550889e-01]]\n",
+            "\n",
+            " [[-2.81906300e-01]]\n",
+            "\n",
+            " [[ 5.49273021e-02]]\n",
+            "\n",
+            " [[ 1.76090468e-01]]\n",
+            "\n",
+            " [[-1.59935380e-01]]\n",
+            "\n",
+            " [[-2.76252019e-01]]\n",
+            "\n",
+            " [[-2.56865913e-01]]\n",
+            "\n",
+            " [[ 1.63974152e-01]]\n",
+            "\n",
+            " [[-2.86752827e-01]]\n",
+            "\n",
+            " [[-1.38126010e-01]]\n",
+            "\n",
+            " [[ 2.58481422e-01]]\n",
+            "\n",
+            " [[-8.07754443e-03]]\n",
+            "\n",
+            " [[-7.83521809e-02]]\n",
+            "\n",
+            " [[ 1.60743134e-01]]\n",
+            "\n",
+            " [[ 2.63327948e-01]]\n",
+            "\n",
+            " [[ 4.36187399e-02]]\n",
+            "\n",
+            " [[-1.25201939e-01]]\n",
+            "\n",
+            " [[ 7.67366721e-02]]\n",
+            "\n",
+            " [[ 9.12762520e-02]]\n",
+            "\n",
+            " [[-2.58481422e-02]]\n",
+            "\n",
+            " [[-5.79967690e-01]]\n",
+            "\n",
+            " [[ 6.60743134e-01]]\n",
+            "\n",
+            " [[-2.73828756e-01]]\n",
+            "\n",
+            " [[-1.03392569e-01]]\n",
+            "\n",
+            " [[-3.93376414e-01]]\n",
+            "\n",
+            " [[ 1.63166397e-01]]\n",
+            "\n",
+            " [[ 1.93861066e-02]]\n",
+            "\n",
+            " [[-1.98707593e-01]]\n",
+            "\n",
+            " [[-2.19709208e-01]]\n",
+            "\n",
+            " [[ 3.06946688e-02]]\n",
+            "\n",
+            " [[-2.00323102e-01]]\n",
+            "\n",
+            " [[-6.00161551e-01]]\n",
+            "\n",
+            " [[ 2.22132472e-01]]\n",
+            "\n",
+            " [[ 3.62681745e-01]]\n",
+            "\n",
+            " [[ 1.89822294e-01]]\n",
+            "\n",
+            " [[ 3.09369952e-01]]\n",
+            "\n",
+            " [[-8.00484653e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[ 5.49273021e-01]]\n",
+            "\n",
+            " [[-3.59450727e-01]]\n",
+            "\n",
+            " [[ 9.77382876e-02]]\n",
+            "\n",
+            " [[ 5.89660743e-02]]\n",
+            "\n",
+            " [[ 8.07754443e-04]]\n",
+            "\n",
+            " [[ 1.00000000e+00]]\n",
+            "\n",
+            " [[ 1.04200323e-01]]\n",
+            "\n",
+            " [[ 1.20355412e-01]]\n",
+            "\n",
+            " [[ 2.03554120e-01]]\n",
+            "\n",
+            " [[ 3.60258481e-01]]\n",
+            "\n",
+            " [[ 2.39903069e-01]]\n",
+            "\n",
+            " [[ 1.45395800e-01]]\n",
+            "\n",
+            " [[-3.95799677e-02]]\n",
+            "\n",
+            " [[ 3.95799677e-01]]\n",
+            "\n",
+            " [[-1.98707593e-01]]\n",
+            "\n",
+            " [[ 1.77705977e-02]]\n",
+            "\n",
+            " [[ 4.83037157e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[ 2.66558966e-02]]\n",
+            "\n",
+            " [[-4.84652666e-01]]\n",
+            "\n",
+            " [[-4.66074313e-01]]\n",
+            "\n",
+            " [[ 2.38287561e-01]]\n",
+            "\n",
+            " [[ 1.18739903e-01]]\n",
+            "\n",
+            " [[ 7.69789984e-01]]\n",
+            "\n",
+            " [[ 1.42164782e-01]]\n",
+            "\n",
+            " [[-3.36025848e-01]]\n",
+            "\n",
+            " [[ 1.96284330e-01]]\n",
+            "\n",
+            " [[-2.59289176e-01]]\n",
+            "\n",
+            " [[-4.11954766e-01]]\n",
+            "\n",
+            " [[-2.51211632e-01]]\n",
+            "\n",
+            " [[-3.24717286e-01]]\n",
+            "\n",
+            " [[ 1.12277868e-01]]\n",
+            "\n",
+            " [[ 4.28917609e-01]]\n",
+            "\n",
+            " [[ 2.60096931e-01]]\n",
+            "\n",
+            " [[ 9.93537964e-02]]\n",
+            "\n",
+            " [[ 5.14539580e-01]]\n",
+            "\n",
+            " [[-4.03877221e-01]]\n",
+            "\n",
+            " [[-2.18093700e-01]]\n",
+            "\n",
+            " [[-1.80129241e-01]]\n",
+            "\n",
+            " [[ 5.81583199e-02]]\n",
+            "\n",
+            " [[ 5.41195477e-02]]\n",
+            "\n",
+            " [[-8.15024233e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[ 2.42326333e-03]]\n",
+            "\n",
+            " [[-5.08885299e-01]]\n",
+            "\n",
+            " [[ 3.02100162e-01]]\n",
+            "\n",
+            " [[-4.71728595e-01]]\n",
+            "\n",
+            " [[ 2.71405493e-01]]\n",
+            "\n",
+            " [[-1.17932149e-01]]\n",
+            "\n",
+            " [[ 1.53473344e-01]]\n",
+            "\n",
+            " [[ 1.26817447e-01]]\n",
+            "\n",
+            " [[ 1.47819063e-01]]\n",
+            "\n",
+            " [[ 7.04361874e-01]]\n",
+            "\n",
+            " [[ 2.69789984e-01]]\n",
+            "\n",
+            " [[-9.69305331e-02]]\n",
+            "\n",
+            " [[ 1.51857835e-01]]\n",
+            "\n",
+            " [[ 2.71405493e-01]]\n",
+            "\n",
+            " [[-6.48626817e-01]]\n",
+            "\n",
+            " [[-2.60096931e-01]]\n",
+            "\n",
+            " [[ 9.20840065e-02]]\n",
+            "\n",
+            " [[ 3.63489499e-02]]\n",
+            "\n",
+            " [[ 4.03877221e-03]]\n",
+            "\n",
+            " [[ 5.15347334e-01]]\n",
+            "\n",
+            " [[-2.38287561e-01]]\n",
+            "\n",
+            " [[-2.26978998e-01]]\n",
+            "\n",
+            " [[-6.30048465e-02]]\n",
+            "\n",
+            " [[-6.45395800e-01]]\n",
+            "\n",
+            " [[ 4.76575121e-01]]\n",
+            "\n",
+            " [[-1.61550889e-03]]\n",
+            "\n",
+            " [[-1.24394184e-01]]\n",
+            "\n",
+            " [[-3.54604200e-01]]\n",
+            "\n",
+            " [[ 1.80129241e-01]]\n",
+            "\n",
+            " [[-1.10662359e-01]]\n",
+            "\n",
+            " [[-4.88691438e-01]]\n",
+            "\n",
+            " [[-5.74313409e-01]]\n",
+            "\n",
+            " [[-3.76413570e-01]]\n",
+            "\n",
+            " [[ 5.65428110e-02]]\n",
+            "\n",
+            " [[-1.91437803e-01]]\n",
+            "\n",
+            " [[ 1.71243942e-01]]\n",
+            "\n",
+            " [[-2.54442649e-01]]\n",
+            "\n",
+            " [[-3.91760905e-01]]\n",
+            "\n",
+            " [[ 6.38126010e-02]]\n",
+            "\n",
+            " [[ 4.71728595e-01]]\n",
+            "\n",
+            " [[ 1.62358643e-01]]\n",
+            "\n",
+            " [[ 2.57673667e-01]]\n",
+            "\n",
+            " [[ 2.89983845e-01]]\n",
+            "\n",
+            " [[ 3.87722132e-02]]\n",
+            "\n",
+            " [[-2.50403877e-01]]\n",
+            "\n",
+            " [[ 3.23101777e-03]]\n",
+            "\n",
+            " [[-4.11147011e-01]]\n",
+            "\n",
+            " [[ 6.06623586e-01]]\n",
+            "\n",
+            " [[ 4.86268174e-01]]\n",
+            "\n",
+            " [[-2.26978998e-01]]\n",
+            "\n",
+            " [[-1.47011309e-01]]\n",
+            "\n",
+            " [[ 1.07431341e-01]]\n",
+            "\n",
+            " [[ 3.63489499e-02]]\n",
+            "\n",
+            " [[ 7.59289176e-02]]\n",
+            "\n",
+            " [[-8.65912763e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-1.05008078e-02]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[-8.94991922e-01]]\n",
+            "\n",
+            " [[ 1.52665590e-01]]\n",
+            "\n",
+            " [[-2.47172859e-01]]\n",
+            "\n",
+            " [[-5.08885299e-02]]\n",
+            "\n",
+            " [[-2.88368336e-01]]\n",
+            "\n",
+            " [[ 2.63327948e-01]]\n",
+            "\n",
+            " [[ 2.52019386e-01]]\n",
+            "\n",
+            " [[-2.10823910e-01]]\n",
+            "\n",
+            " [[-1.21163166e-01]]\n",
+            "\n",
+            " [[-1.65589661e-01]]\n",
+            "\n",
+            " [[ 1.69628433e-02]]\n",
+            "\n",
+            " [[-4.13570275e-01]]\n",
+            "\n",
+            " [[-2.76252019e-01]]\n",
+            "\n",
+            " [[-7.75444265e-02]]\n",
+            "\n",
+            " [[-3.51373183e-01]]\n",
+            "\n",
+            " [[ 8.77221325e-01]]]\n",
+            "                       yhat =  13.854151899814605\n",
+            "                       yhat =  15.803713732957839\n",
+            "                       yhat =  17.423491576910017\n",
+            "                       yhat =  18.172971495985983\n",
+            "                       yhat =  20.452734234929082\n",
+            "                       yhat =  18.303702155351637\n",
+            "                       yhat =  19.934223534464834\n",
+            "                       yhat =  18.4641663479805\n",
+            "                       yhat =  20.972200154066083\n",
+            "                       yhat =  20.11708943128586\n",
+            "                       yhat =  18.25905997931957\n",
+            "                       yhat =  16.523207017183303\n",
+            "                       yhat =  19.89731903553009\n",
+            "                       yhat =  18.599731026291845\n",
+            "                       yhat =  18.957313760519025\n",
+            "                       yhat =  16.89258553981781\n"
           ],
           "name": "stdout"
         }
