--- a/neural-network/Article.ipynb
+++ b/neural-network/Article.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled84.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMhHz/jZt2gRg1+LBz8xBN9",
+      "authorship_tag": "ABX9TyN216daC3WPzVakLhb6sDT6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "5258d574-1e59-4f7d-b87a-8269b978639c"
+        "outputId": "e9ec7ef6-0cd8-4b73-8198-4a0bcd69aa69"
       },
       "source": [
         "# Imports\n",
@@ -99,7 +99,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 355
         },
-        "outputId": "29c1e69c-0fa8-46d3-b501-f7214d365a20"
+        "outputId": "e6142874-a26d-48a5-b497-b0a23e0df2af"
       },
       "source": [
         "# The dataframe of actual offensive points for each game from 2000-2019\n",
@@ -665,7 +665,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "68a73e02-e6b4-457d-f7e9-e81946724112"
+        "outputId": "e5b96c28-a44f-4815-8665-9202b59615cb"
       },
       "source": [
         "# The dataframe of all 2019 offensive players (kickers and offense)\n",
@@ -778,7 +778,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "285e0a4f-1617-4c96-8563-77082115de7e"
+        "outputId": "88ac6aba-fac9-4bcc-9186-ab1b774219fe"
       },
       "source": [
         "# The dataframe of bye weeks for 2019 teams\n",
@@ -891,7 +891,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "eabb1582-1927-40df-886f-59fd1f1dda61"
+        "outputId": "6ce33c01-a1d3-40f6-a5b8-41ad825767c8"
       },
       "source": [
         "# The dataframe of injuries for 2019 players\n",
@@ -1221,6 +1221,8 @@
         "        # Sum the weekly forecasts\n",
         "        yhat_sum = yhat_sum + yhat\n",
         "\n",
+        "    print('                       yhat_sum = ', yhat_sum)\n",
+        "\n",
         "    return yhat_sum"
       ],
       "execution_count": 13,
@@ -1367,7 +1369,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "c32034f1-d48c-4214-d92c-065db3f12d82"
+        "outputId": "de983762-fcea-4631-d506-b9ad47379da0"
       },
       "source": [
         "# Run for seasons 1 through 17\n",
@@ -3305,22 +3307,23 @@
             " [[-3.51373183e-01]]\n",
             "\n",
             " [[ 8.77221325e-01]]]\n",
-            "                       yhat =  13.854151899814605\n",
-            "                       yhat =  15.803713732957839\n",
-            "                       yhat =  17.423491576910017\n",
-            "                       yhat =  18.172971495985983\n",
-            "                       yhat =  20.452734234929082\n",
-            "                       yhat =  18.303702155351637\n",
-            "                       yhat =  19.934223534464834\n",
-            "                       yhat =  18.4641663479805\n",
-            "                       yhat =  20.972200154066083\n",
-            "                       yhat =  20.11708943128586\n",
-            "                       yhat =  18.25905997931957\n",
-            "                       yhat =  16.523207017183303\n",
-            "                       yhat =  19.89731903553009\n",
-            "                       yhat =  18.599731026291845\n",
-            "                       yhat =  18.957313760519025\n",
-            "                       yhat =  16.89258553981781\n"
+            "                       yhat =  13.550041856765747\n",
+            "                       yhat =  15.615552995204924\n",
+            "                       yhat =  17.195858060121534\n",
+            "                       yhat =  18.015674024820328\n",
+            "                       yhat =  20.544238206744193\n",
+            "                       yhat =  18.375679302811623\n",
+            "                       yhat =  19.83470756918192\n",
+            "                       yhat =  18.937192922234534\n",
+            "                       yhat =  21.3260236287117\n",
+            "                       yhat =  20.56778145074844\n",
+            "                       yhat =  18.166402292251586\n",
+            "                       yhat =  16.316439254283903\n",
+            "                       yhat =  19.98121999800205\n",
+            "                       yhat =  18.90507374048233\n",
+            "                       yhat =  18.95989200234413\n",
+            "                       yhat =  16.812043523192404\n",
+            "                       yhat_sum =  293.10382082790136\n"
           ],
           "name": "stdout"
         }
